Fix education details text color visibility

--- a/style.css
+++ b/style.css
@@ -1163,7 +1163,7 @@ footer {
 }
 
 .edu-details span {
-  color: #8a8989;
+  color: #dfdcdc;
   font-size: 13px;
   display: flex;
   align-items: center;
